Fix spacing

--- a/main.css
+++ b/main.css
@@ -888,6 +888,8 @@ hr {
   margin-bottom: 2.5rem;
   border-width: 0;
   border-top: 1px solid #CCCCCC; }
+.spacer {
+  padding-top: 6rem; }
 
 
 /* Utilities
